# PARKY

./: README.md  callbacks.c  itaf haamdi
final project/project1/: Makefile  config.status  project1.glade
final project/project1/autom4te.cache/: requests
final project/project1/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  fct.c  fct.h  interface.c  interface.c.bak  interface.h.bak  main.c  project1
final project/project1/src/.deps/: fct.Po
parkyFinalProject/: Makefile  Makefile.am  Makefile.in  agents.txt  agents2.txt  cherche_reservation.txt  citoyen.txt  config.h  config.status  configure  configure.in  facture.txt  parc.txt  parking.txt  parkyfinalproject.glade  parkyfinalproject.gladep  re.txt  reservation.txt  reservations.txt  reservationsTrie.txt  services.txt  services2.txt  signup.txt
parkyFinalProject/autom4te.cache/: output.1  requests  traces.0  traces.1
parkyFinalProject/po/: Makefile  Makefile.in
parkyFinalProject/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  function.c  function.h  interface.c  interface.h  main.c
